# CPPtemplate

./: .gitignore  CMakeLists.txt
cmake/: CompileOptions.cmake  FindTBB.cmake  TaskingSystemOptions.cmake
include/project/: project.h
scripts/: header_gen.py
src/examples/first_example/: CMakeLists.txt
src/project/: CMakeLists.txt
